--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
   "name": "@crypto-pos/mono",
   "version": "1.0.0",
   "scripts": {
-    "build": "npm run build --workspaces --parallel",
     "build:frontend": "npm run -w @crypto-pos/frontend build",
     "build:backend": "npm run -w @crypto-pos/backend build",
-
-    "start": "npm start --workspaces --parallel",
+    "build": "npm run build --workspaces --parallel",
+    "dev:frontend": "npm run -w @crypto-pos/frontend dev",
+    "dev:backend": "npm run -w @crypto-pos/backend dev",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\" --kill-others --success first",
     "start:frontend": "npm run -w @crypto-pos/frontend start",
     "start:backend": "npm run -w @crypto-pos/backend start",
-    "typecheck": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm start --workspaces --parallel",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./scripts/post_install"
   },
   "keywords": [
     "graphql",
     "typescript",
     "monorepo",
-    "pos"
+    "point-of-sale"
   ],
   "author": "George Phillips <georgephillips22@gmail.com>",
   "description": "",
@@ -24,5 +26,8 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "concurrently": "8.2.2"
+  }
 }
