--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,7 +7,7 @@
     "build": "npm run generate:prisma && tsc",
     "generate:prisma": "prisma generate",
     "start": "node --experimental-specifier-resolution=node  --loader ts-node/esm ./dist/index.js",
-    "dev": "concurrently \"tsc --watch\" \"npm:build && nodemon\"",
+    "dev": "npx concurrently \"tsc --watch\" \"npm:build && nodemon\"",
     "db:seed": "prisma db seed",
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
@@ -33,19 +33,23 @@
     "@pothos/core": "^4.0.2",
     "@pothos/plugin-prisma": "^4.0.3",
     "@prisma/client": "^5.16.2",
+    "@types/cors": "2.8.17",
+    "@types/morgan": "1.9.9",
+    "@types/node": "~20.10.0",
+    "@types/ws": "8.5.11",
     "cors": "^2.8.5",
+    "dotenv": "16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
+    "graphql-ws": "5.16.0",
     "morgan": "^1.10.0",
+    "ts-node": "^10.9.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
-    "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^20.14.10",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -56,7 +60,6 @@
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
     "prisma": "^5.16.2",
-    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.0"
   }
