--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,22 +5,33 @@
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "dev": "remix vite:dev --host",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "codegen": "graphql-codegen",
+    "generate:graphql": "graphql-codegen",
+    "generate:graphql:watch": "graphql-codegen --watch",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "3.9.0",
+    "@parcel/watcher": "2.4.1",
+    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-radio-group": "1.2.0",
+    "@radix-ui/react-scroll-area": "1.1.0",
+    "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-tabs": "1.1.0",
     "@remix-run/node": "^2.10.2",
     "@remix-run/react": "^2.10.2",
     "@remix-run/serve": "^2.10.2",
+    "@tanstack/react-query": "5.51.1",
+    "@tanstack/react-query-devtools": "5.51.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
+    "graphql-request": "7.1.0",
     "isbot": "^4.1.0",
     "lucide-react": "0.408.0",
     "react": "^18.2.0",
@@ -28,11 +39,16 @@
     "react-hook-form": "7.52.1",
     "remix-auth": "3.7.0",
     "remix-auth-form": "1.5.0",
+    "remix-themes": "1.5.0",
     "tailwind-merge": "2.4.0",
     "tailwindcss-animate": "1.0.7",
+    "tiny-invariant": "1.3.3",
+    "usehooks-ts": "3.1.0",
+    "vaul": "0.9.1",
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "1.12.11",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "4.3.2",
     "@graphql-codegen/typed-document-node": "5.0.9",
@@ -44,6 +60,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
+    "concurrently": "8.2.2",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
